# chessbot

./: .gitignore  LICENSE  README.md  chessbot_uci.py  config.yml  main.py  pyproject.toml
.github/workflows/: black-check.yml
src/: minimax_engine.py  uci.py  utils.py
